# hexomino

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  index-2b59dd9c0112289a.js  index-2b59dd9c0112289a_bg.wasm  index-3922f4ffc745af6.js  index-3922f4ffc745af6_bg.wasm  index-3abc374310a92470.js  index-3abc374310a92470_bg.wasm  index-50470335a7a08fd6.js  index-50470335a7a08fd6_bg.wasm  index-65aa459da54449a1.js  index-65aa459da54449a1_bg.wasm  index-6e90a79a2afa1475.js  index-6e90a79a2afa1475_bg.wasm  index-700e0de9c9b39583.js  index-700e0de9c9b39583_bg.wasm  index-a1ba5034d76212e7.js  index-a1ba5034d76212e7_bg.wasm  index-a3d99403bd9d38e9.js  index-a3d99403bd9d38e9_bg.wasm  index-a4d7d5fc6cd136e8.js  index-a4d7d5fc6cd136e8_bg.wasm  index-bea056fa218b57d4.js  index-bea056fa218b57d4_bg.wasm  index-dd0f6f18c1066236.js  index-dd0f6f18c1066236_bg.wasm  index-e724bc909f3328ac.js  index-e724bc909f3328ac_bg.wasm  index-e7bc279d68072d63.js  index-e7bc279d68072d63_bg.wasm  index-fd0b718e7c982b3f.js  index-fd0b718e7c982b3f_bg.wasm  index.html  package.json  (+6 more)
.github/workflows/: gh-pages.yml
gen_hexos/: gen.py
hexomino-api/: Cargo.toml
hexomino-api/src/: auth.rs  error.rs  game.rs  lib.rs  match_history.rs  room.rs  user.rs  ws.rs
hexomino-core/: Cargo.toml
hexomino-core/gen_hexos/: gen.py
hexomino-core/src/: board.rs  constants.rs  hexo.rs  lib.rs  pos.rs  state.rs
hexomino-server/: .gitignore  Cargo.toml
hexomino-server/db/: staging.db
hexomino-server/migrations/: 20220420073731_create-users-table.up.sql  20220420080218_create-test-users.down.sql  20220420080218_create-test-users.up.sql  20220616070942_create-match-histories.down.sql  20220616070942_create-match-histories.up.sql  20220618203359_create-admin-for-test-only.down.sql  20220618203359_create-admin-for-test-only.up.sql
hexomino-server/src/: api.rs  auth.rs  http.rs  lib.rs  main.rs  result.rs  utils.rs  ws.rs
hexomino-server/src/http/: auth.rs  game.rs  match_history.rs  mod.rs  room.rs
hexomino-server/src/kernel/: actor.rs  deadline.rs  game.rs  match_history.rs  mod.rs  room.rs  user.rs
hexomino-server/tests/: api_integration_test.rs
hexomino-web/: Cargo.toml
hexomino-web/html/: index.html  style.scss
hexomino-web/src/: main.rs  util.rs
hexomino-web/src/context/: auth.rs  main.rs  mod.rs  ws.rs
hexomino-web/src/context/connection/: auth.rs  mod.rs  ws.rs
hexomino-web/src/game/: ai_game.rs  mod.rs  two_player_game.rs
hexomino-web/src/view/: error_message.rs  login_modal.rs  login_view.rs  match_history_view.rs  menu.rs  mod.rs  room.rs  rooms.rs  rule_view.rs  shared_link.rs  util.rs  ws_reconnect.rs
hexomino-web/src/view/common/: hexo_svg.rs  mod.rs
hexomino-web/src/view/game/: ai_game_view.rs  board_canvas.rs  board_renderer.rs  bottom_message.rs  deadline_indicator.rs  end_view.rs  hexo_block.rs  hexo_svg.rs  hexo_table.rs  match_end_view.rs  mod.rs  pick_view.rs  place_view.rs  state.rs  turn_indicator.rs
js/: index.js
src/: index.html  lib.rs  main.rs
src/game/: board.rs  constants.rs  hexo.rs  mod.rs  point.rs  pos.rs  state.rs
src/html/: index.html  style.scss
src/render/: mod.rs
src/view/: menu.rs  mod.rs  util.rs  window_events.rs
src/view/game/: board_canvas.rs  end_view.rs  hexo_svg.rs  hexo_table.rs  mod.rs  pick_inventory.rs  pick_view.rs  place_view.rs  player.rs  state.rs  turn_indicator.rs
static/: index.html
tests/: app.rs
