[package]
name = "hexomino-api"
description = "API definition for the hexomino game"
version = "0.1.0"
authors = ["Cheng-Min Chiang <chmnchiang@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
hexomino-core = { version = "0.1.0", path = "../hexomino-core" }
serde = "1.0.136"

[features]
internal-debug = []
