[package]
name = "hexomino-core"
description = "Implements the core of the game Hexomino"
version = "0.1.0"
authors = ["Cheng-Min Chiang <chmnchiang@gmail.com>"]
edition = "2021"

[dependencies]
assert2 = "0.3.6"
getset = "0.1.2"
itertools = "0.10"
piet = "0.5"
serde = "1.0.136"
thiserror = "1.0.31"
