# You must change these to your own details.
[package]
name = "hexomino-server"
description = "Backend server for the hexomino game"
version = "0.1.0"
authors = ["Cheng-Min Chiang <chmnchiang@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.5", features = ["headers", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.2", features = ["auth", "trace", "fs"] }
jsonwebtoken = "8.1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0" }
chrono = "0.4.19"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing = "0.1.34"
api = { package = "hexomino-api", path = "../hexomino-api" }
futures = { version = "0.3.21" }
stream-cancel = "0.8.1"
guard = "0.5.1"
parking_lot = "0.12.0"
bincode = "1.3.3"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-tokio-native-tls", "postgres", "uuid", "offline", "chrono"] }
dotenv = "0.15.0"
derivative = "2.2.0"
itertools = "0.10.3"
dashmap = "5.2.0"
once_cell = "1.10.0"
thiserror = "1.0.30"
getset = "0.1.2"
uuid = { version = "1.0.0", features = ["v4"] }
derive_more = "0.99.17"
hexomino-core = { path = "../hexomino-core"  }
serde_json = "1.0.81"

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
anyhow = "1.0.56"

[features]
internal-debug = []
