# You must change these to your own details.
[package]
name = "hexomino-web"
description = "Web interface for the hexomino game"
version = "0.1.0"
authors = ["Cheng-Min Chiang <chmnchiang@gmail.com>"]
readme = "README.md"
edition = "2021"

[features]
default = ["wee_alloc"]

[dependencies]
anyhow = "1.0"
assert2 = "0.3.6"
hexomino-core = { path = "../hexomino-core"  }
api = { package = "hexomino-api", path = "../hexomino-api"  }
itertools = "0.10"
log = "0.4"
piet = "0.5"
piet-web = "0.5"
rand = "0.8.5"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.2", optional = true }
yew = "0.19"
futures = "0.3.21"
bincode = "1.3.3"
yew-router = "0.16.0"
derive_more = "0.99.17"
serde = "1.0.136"
thiserror = "1.0.30"
serde_json = "1.0.79"
getset = "0.1.2"
console_error_panic_hook = "0.1"
chrono = { version = "0.4.19", features = ["wasmbind"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.gloo]
version = "0.7"
features = ["futures"]

[dependencies.web-sys]
version = "0.3.55"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlSelectElement",
  "CanvasRenderingContext2d",
  "console",
  "DomRect",
  "KeyboardEvent",
  "FocusEvent",
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.29"
js-sys = "0.3.22"
